feat: 5/27 works merge
영민 효준 작업물 합침
clone헤서 해당 파일 받아서 작업 진행하기

--- a/frontEnd/app/src/main/res/layout/fragmert_first.xml
+++ b/frontEnd/app/src/main/res/layout/fragmert_first.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     tools:context=".FirstFragment">
     <LinearLayout
+        android:id="@+id/fortest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
@@ -22,6 +23,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:id="@+id/cb_all_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
