--- a/frontEnd/app/src/main/res/layout/activity_food_main.xml
+++ b/frontEnd/app/src/main/res/layout/activity_food_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F5F5F5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Food_Main">
@@ -15,11 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:text="로고자리" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/logo_icon"/>
 
         <View
             android:layout_width="0dp"
