--- a/frontEnd/app/src/main/res/layout/fragmert_first.xml
+++ b/frontEnd/app/src/main/res/layout/fragmert_first.xml
@@ -23,6 +23,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:id="@+id/cb_all_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,6 +47,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -67,6 +69,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -88,6 +91,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -109,6 +113,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -130,6 +135,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -151,6 +157,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -172,6 +179,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -193,6 +201,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <CheckBox
+            android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
