--- a/frontEnd/app/src/main/res/layout/activity_food_main.xml
+++ b/frontEnd/app/src/main/res/layout/activity_food_main.xml
@@ -215,8 +215,9 @@
                     android:textColor="@color/black"/>
             </LinearLayout>
 
-            <ListView
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
+                android:layout_margin="8dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
