--- a/frontEnd/app/src/main/res/layout/activity_food_main.xml
+++ b/frontEnd/app/src/main/res/layout/activity_food_main.xml
@@ -216,9 +216,9 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/reslist"
                 android:layout_width="match_parent"
-                android:layout_margin="8dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="280dp"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
