--- a/frontEnd/app/src/main/res/layout/main_listview_item.xml
+++ b/frontEnd/app/src/main/res/layout/main_listview_item.xml
@@ -3,19 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:layout_marginBottom="10dp"
+    >
     <LinearLayout
+        android:id="@+id/frame_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_background"
-        android:padding="5dp">
+        android:background="@drawable/item_background">
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/hart_home_icon"/>
+            android:id="@+id/mainimg"
+            android:layout_width="70dp"
+            android:layout_height="100dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/hart_home_icon" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
                 <TextView
+                    android:id="@+id/text_main_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -61,7 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:text="위생등급 매우 우수"
+                        android:text="모범식당"
                         android:textColor="@color/black"/>
                     <ImageView
                         android:layout_width="wrap_content"
@@ -70,8 +76,10 @@
                         android:layout_gravity="center"/>
                 </LinearLayout>
             <TextView
+                android:id="@+id/text_main_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="서울특별시 oo구 oo동"/>
             <LinearLayout
                 android:layout_width="wrap_content"
